fix(variable): use consistent variable across server and ui

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-#   __    ___   ___  
-#  / /\  | |_) | |_) 
-# /_/--\ |_|   |_|   
+#   __    ___   ___
+#  / /\  | |_) | |_)
+# /_/--\ |_|   |_|
 #
 
 # Vela api server address, typically runs on port :8080 locally.
@@ -9,7 +9,7 @@
 VELA_API=http://localhost:8080
 
 # github base url (ie. https://github.com), no trailing slash
-VELA_SOURCE_BASE_URL=
+VELA_SOURCE_URL=
 
 # github oauth app client id
 VELA_SOURCE_CLIENT=
@@ -17,9 +17,9 @@ VELA_SOURCE_CLIENT=
 # github oauth app client secret
 VELA_SOURCE_SECRET=
 
-#   __    ___   _  
-#  / /\  | |_) | | 
-# /_/--\ |_|   |_| 
+#   __    ___   _
+#  / /\  | |_) | |
+# /_/--\ |_|   |_|
 #
 
 # note: same as used by APP, henced commented out
