--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: publish
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   publish:
@@ -10,20 +10,26 @@ jobs:
       NODE_ENV: production
       ELM_HOME: "${GITHUB_WORKSPACE}"
     steps:
-    - name: clone
-      uses: actions/checkout@master
+      - name: clone
+        uses: actions/checkout@master
 
-    - name: setup node
-      uses: actions/setup-node@v1
-      with:
-        node-version: '10.15.3'
-    - run: npm ci
-    - run: npm run build-prod
+      - name: cache node_modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: npm-${{ hashFiles('**/package-lock.json') }}
 
-    - name: publish
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: target/vela-ui
-        cache: true
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "10.15.3"
+      - run: npm i
+      - run: npm run build-prod
+
+      - name: publish
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: target/vela-ui
+          cache: true
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
