--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -16,7 +16,13 @@ jobs:
         uses: actions/cache@v1
         with:
           path: node_modules
-          key: npm-${{ hashFiles('**/package-lock.json') }}
+          key: npm-modules-${{ hashFiles('**/package-lock.json') }}
+      
+      - name: cache .cache
+        uses: actions/cache@v1
+        with:
+          path: "${HOME}"/.cache
+          key: home-cache-${{ hashFiles('**/package-lock.json') }}
 
       - name: setup node
         uses: actions/setup-node@v1
