--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -20,10 +20,10 @@ jobs:
           path: node_modules
           key: npm-modules-${{ hashFiles('**/package-lock.json') }}
 
-      - name: cache .cache
+      - name: cache home cache
         uses: actions/cache@v1
         with:
-          path: "${HOME}"/.cache
+          path: "${HOME}/.cache"
           key: home-cache-${{ hashFiles('**/package-lock.json') }}
 
       - name: cypress
