--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           path: node_modules
           key: npm-modules-${{ hashFiles('**/package-lock.json') }}
-      
-      - name: cache .cache
+
+      - name: cache home cache
         uses: actions/cache@v1
         with:
-          path: "${HOME}"/.cache
+          path: "${HOME}/.cache"
           key: home-cache-${{ hashFiles('**/package-lock.json') }}
 
       - name: setup node
