--- a/.github/workflows/elm-test.yml
+++ b/.github/workflows/elm-test.yml
@@ -21,7 +21,7 @@ jobs:
       - name: cache home cache
         uses: actions/cache@v1
         with:
-          path: "${HOME}/.cache"
+          path: "$HOME/.cache"
           key: home-cache-${{ hashFiles('**/package-lock.json') }}
 
       - name: setup node
