--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: "$HOME/.cache"
-          key: home-cache-${{ hashFiles('**/package-lock.json') }}
+          key: home-dotcache-${{ hashFiles('**/package-lock.json') }}
 
       - name: cypress
         run: |
