--- a/.github/workflows/elm-test.yml
+++ b/.github/workflows/elm-test.yml
@@ -16,13 +16,13 @@ jobs:
         uses: actions/cache@v1
         with:
           path: node_modules
-          key: npm-modules-${{ hashFiles('**/package-lock.json') }}
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: cache home cache
         uses: actions/cache@v1
         with:
-          path: "$HOME/.cache"
-          key: home-dotcache-${{ hashFiles('**/package-lock.json') }}
+          path: ~/.cache
+          key: home-dcache-${{ hashFiles('**/package-lock.json') }}
 
       - name: setup node
         uses: actions/setup-node@v1
