--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/cache@v1
         with:
           path: node_modules
-          key: npm-modules-${{ hashFiles('**/package-lock.json') }}
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: cache home cache
         uses: actions/cache@v1
         with:
-          path: "$HOME/.cache"
-          key: home-dotcache-${{ hashFiles('**/package-lock.json') }}
+          path: ~/.cache
+          key: home-dcache-${{ hashFiles('**/package-lock.json') }}
 
       - name: cypress
         run: |
