--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,12 @@ jobs:
   integration:
     name: run cypress tests
     runs-on: ubuntu-latest
+    env:
+      VELA_API: "http://localhost:8080"
+      VELA_SOURCE_URL: ""
+      VELA_SOURCE_CLIENT: ""
+      VELA_SOURCE_SECRET: ""
+      TERM: xterm
 
     steps:
       - uses: actions/checkout@v1
@@ -134,6 +140,7 @@ jobs:
     needs: [elm-format, elm-test, integration]
     env:
       NODE_ENV: production
+
     steps:
       - uses: actions/checkout@v1
       - uses: actions/cache@v1
