--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # /_/--\ |_|   |_|
 #
 
-# Vela api server address, typically runs on port :8080 locally.
+# Vela API server address, typically runs on port :8080.
 # Should match the "VELA_ADDR" value in docker-compose.yml
 # when running locally.
 VELA_API=http://localhost:8080
@@ -14,18 +14,25 @@ VELA_SOURCE_URL=
 # github oauth app client id
 VELA_SOURCE_CLIENT=
 
-# github oauth app client secret
-VELA_SOURCE_SECRET=
+# customize the location where you want users to provide feedack
+# (default) https://github.com/go-vela/ui/issues/new
+# VELA_FEEDBACK_URL=
+
+# customize the location where users can review documentation
+# (default) https://go-vela.github.io/docs
+# VELA_DOCS_URL=
 
 #   __    ___   _
 #  / /\  | |_) | |
 # /_/--\ |_|   |_|
 #
 
-# note: same as used by APP, henced commented out
+# These should only be needed if you are running
+# the docker compose stack as they are used by the api/server
 
+# note: same as used by APP, henced commented out
 # github oauth app client id
 # VELA_SOURCE_CLIENT=
 
 # github oauth app client secret
-# VELA_SOURCE_SECRET=
+VELA_SOURCE_SECRET=
