--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": ">=10.15.0"
   },
+  "engineStrict": true,
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@types/parcel-env": "0.0.0",
@@ -20,7 +21,19 @@
   "devDependencies": {
     "cypress": "^3.6.0",
     "elm-hot": "^1.1.3",
-    "start-server-and-test": "^1.10.6"
+    "prettier": "^1.19.1",
+    "start-server-and-test": "^1.10.6",
+    "stylelint": "^12.0.0",
+    "stylelint-color-format": "^0.2.0",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.12.1",
+    "stylelint-value-no-exposed-custom-properties": "^2.2.0",
+    "stylelint-value-no-unknown-custom-properties": "^2.0.0",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0"
   },
   "scripts": {
     "predev": "npm run clean",
@@ -38,6 +51,8 @@
     "test:cy-open": "start-test 8888 cypress:open",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
+    "css:lint": "stylelint 'src/scss/**/*.scss' '!src/scss/_reset.scss' --syntax scss",
+    "css:lint-fix": "npm run css:lint -- --fix",
     "clean": "rimraf ./dist/*"
   },
   "repository": {
