--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "start-server-and-test": "^1.10.6",
     "stylelint": "^12.0.0",
     "stylelint-color-format": "^0.2.0",
+    "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-config-standard": "^19.0.0",
+    "stylelint-high-performance-animation": "^1.3.0",
     "stylelint-order": "^3.1.1",
     "stylelint-scss": "^3.12.1",
     "stylelint-value-no-exposed-custom-properties": "^2.2.0",
