add lint to needs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,42 @@ jobs:
       - name: run elm-test
         run: npm run test
 
+  # ┬  ┬┌┐┌┌┬┐
+  # │  ││││ │
+  # ┴─┘┴┘└┘ ┴
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+      - uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-${{ runner.os }}-bin-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            cypress-${{ runner.os }}-bin-
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.USE_NODE_VER }}
+
+      - name: install dependencies
+        run: npm i --prefer-offline --no-audit
+      - name: run linter
+        run: npm run css:lint
+
   # ┌─┐┬ ┬┌─┐┬─┐┌─┐┌─┐┌─┐
   # │  └┬┘├─┘├┬┘├┤ └─┐└─┐
   # └─┘ ┴ ┴  ┴└─└─┘└─┘└─┘
@@ -140,7 +176,7 @@ jobs:
     name: build and push to docker
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'go-vela/ui'
-    needs: [elm-format, elm-test, integration]
+    needs: [lint, elm-format, elm-test, integration]
 
     steps:
       - uses: actions/checkout@v1
