--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^3.7.2"
   },
   "devDependencies": {
+    "axe-core": "^3.4.0",
     "cypress": "^3.6.0",
+    "cypress-axe": "^0.5.1",
     "elm-hot": "^1.1.3",
     "start-server-and-test": "^1.10.6"
   },
