--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@types/parcel-env": "0.0.0",
-    "autoprefixer": "^9.7.1",
+    "autoprefixer": "^9.7.3",
     "elm": "^0.19.1-3",
     "node-elm-compiler": "^5.0.4",
     "parcel-bundler": "^1.12.4",
     "rimraf": "^3.0.0",
-    "sass": "^1.23.3",
+    "sass": "^1.23.7",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
-    "cypress": "^3.6.0",
-    "elm-hot": "^1.1.3",
+    "axe-core": "^3.4.0",
+    "cypress": "^3.7.0",
+    "cypress-axe": "^0.5.1",
+    "elm-hot": "^1.1.4",
     "start-server-and-test": "^1.10.6"
   },
   "scripts": {
