--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -4,24 +4,22 @@ server {
     root /usr/share/nginx/html;
     server_name vela;
 
-    # add security headers
+    # add (some) security headers
     add_header X-Frame-Options "DENY" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'" always;
-    # the following header will break things unless you are running behind a secured (ssl/tls) load balancer or proxy
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
     # serve up health endpoint
     location /health {
         access_log off;
         return 204;
     }
-
+    
     # /login proxy to backend server to allow configuring CLI w/ UI server
     location /login {
-        proxy_pass $VELA_API;
+        proxy_pass http://server:8080;
         
         recursive_error_pages on;
         proxy_intercept_errors on;
