fix(csp): adjust CSP headers

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' $VELA_API; img-src 'self'; style-src 'self'" always;
     # the following header will break things unless you are running behind a secured (ssl/tls) load balancer or proxy
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
