--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -9,7 +9,7 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' http://server:8080; img-src 'self'; style-src 'self'" always;
 
     # serve up health endpoint
     location /health {
