--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - vela
     environment:
       VELA_ADDR: "http://localhost:8080"
+      VELA_WEBUI_ADDR: "http://ui:80"
       VELA_DATABASE_DRIVER: postgres
       VELA_DATABASE_CONFIG: postgres://postgres@postgres:5432/vela?sslmode=disable
       VELA_LOG_LEVEL: debug
