--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": ">=12.13.1"
   },
+  "engineStrict": true,
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@types/parcel-env": "0.0.0",
@@ -22,7 +23,18 @@
     "cypress": "^3.7.0",
     "cypress-axe": "^0.5.1",
     "elm-hot": "^1.1.4",
-    "start-server-and-test": "^1.10.6"
+    "prettier": "^1.19.1",
+    "start-server-and-test": "^1.10.6",
+    "stylelint": "^12.0.1",
+    "stylelint-a11y": "^1.2.2",
+    "stylelint-color-format": "^1.0.0",
+    "stylelint-config-prettier": "^8.0.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-scss": "^4.1.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.2.0",
+    "stylelint-high-performance-animation": "^1.4.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.13.0"
   },
   "scripts": {
     "predev": "npm run clean",
@@ -40,17 +52,30 @@
     "test:cy-open": "start-test 8888 cypress:open",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
-    "clean": "rimraf ./.cache ./dist"
+    "clean": "rimraf ./.cache ./dist",
+    "lint:prettier": "prettier --loglevel warn '**/*.{js,json,ts,scss,html,md}'",
+    "lint:prettier-fix": "npm run lint:prettier -- --write",
+    "lint:css": "stylelint 'src/scss/**/*.scss' --syntax scss",
+    "lint:css-fix": "npm run lint:css -- --fix",
+    "lint:elm": "elm-format --validate src/ tests/",
+    "lint:fix": "npm run lint:prettier-fix && npm run lint:css-fix",
+    "lint": "npm run lint:prettier && npm run lint:css"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/go-vela/ui.git"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "keywords": [
     "elm",
     "parcel",
-    "purgecss",
-    "cypress"
+    "ci",
+    "cypress",
   ],
   "license": "Apache-2.0"
 }
