--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "lint:css": "stylelint 'src/scss/**/*.scss' --syntax scss",
     "lint:css-fix": "npm run lint:css -- --fix",
     "lint:elm": "elm-format --validate src/ tests/",
-    "lint:fix": "npm run lint:prettier-fix && npm run lint:css-fix",
-    "lint": "npm run lint:prettier && npm run lint:css"
+    "lint:fix": "npm run lint:css-fix && npm run lint:prettier-fix",
+    "lint": "npm run lint:css && npm run lint:prettier"
   },
   "repository": {
     "type": "git",
