some more tweaks

--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "cypress": "cypress run",
     "cypress:open": "cypress open",
     "clean": "rimraf ./.cache ./dist",
-    "lint:prettier": "prettier --loglevel warn '**/*.{js,json,ts,scss,html,md}'",
+    "lint:prettier": "prettier --check '**/*.{js,json,ts,yml,scss,html,md}'",
     "lint:prettier-fix": "npm run lint:prettier -- --write",
-    "lint:css": "stylelint 'src/scss/**/*.scss' --syntax scss",
+    "lint:css": "stylelint --cache --cache-location '.cache' 'src/scss/**/*.scss'",
     "lint:css-fix": "npm run lint:css -- --fix",
     "lint:elm": "elm-format --validate src/ tests/",
     "lint:fix": "npm run lint:css-fix && npm run lint:prettier-fix",
