--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-scss": "^4.1.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.2.0",
+    "stylelint-declaration-strict-value": "^1.1.7",
     "stylelint-high-performance-animation": "^1.4.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0"
