--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   # ui:
   #   container_name: ui
@@ -22,25 +22,25 @@ services:
     networks:
       - vela
     environment:
-      VELA_ADDR: "http://localhost:8080"
-      VELA_WEBUI_ADDR: "http://ui:80"
+      VELA_ADDR: 'http://localhost:8080'
+      VELA_WEBUI_ADDR: 'http://ui:80'
       VELA_DATABASE_DRIVER: postgres
       VELA_DATABASE_CONFIG: postgres://postgres@postgres:5432/vela?sslmode=disable
       VELA_LOG_LEVEL: debug
       VELA_QUEUE_DRIVER: redis
       VELA_QUEUE_CONFIG: redis://redis:6379
       VELA_QUEUE_WORKER_ROUTES: larger,docker,large:docker
-      VELA_PORT: ":8080"
+      VELA_PORT: ':8080'
       VELA_SECRET: zB7mrKDTZqNeNTD8z47yG4DHywspAh
       VELA_SOURCE_DRIVER: github
-      VELA_SECRET_VAULT: "true"
+      VELA_SECRET_VAULT: 'true'
       VELA_SECRET_VAULT_ADDR: http://vault:8200
       VELA_SECRET_VAULT_TOKEN: vela
     env_file:
       - .env
     restart: always
     ports:
-      - "8080:8080"
+      - '8080:8080'
     depends_on:
       - postgres
       - redis
@@ -76,7 +76,7 @@ services:
     networks:
       - vela
     ports:
-      - "6379:6379"
+      - '6379:6379'
 
   postgres:
     container_name: postgres
@@ -86,7 +86,7 @@ services:
     environment:
       POSTGRES_DB: vela
     ports:
-      - "5432:5432"
+      - '5432:5432'
 
   vault:
     image: vault:0.9.6
@@ -98,7 +98,7 @@ services:
       VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
       VAULT_DEV_ROOT_TOKEN_ID: vela
     ports:
-      - "8200:8200"
+      - '8200:8200'
     cap_add:
       - IPC_LOCK
 
