typo in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     restart: always
     ports:
       - '8080:8080'
-    depends_on:x
+    depends_on:
       - postgres
       - redis
       - vault
