--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,9 +64,9 @@ services:
   #     VELA_VAULT_TOKEN: vela
   #   restart: always
   #   ports:
-  #     - "8081:8080"
+  #     - '8081:8080'
   #   volumes:
-  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #     - '/var/run/docker.sock:/var/run/docker.sock'
   #   depends_on:
   #     - server
 
