--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
   # └─┘┴─┘┴ ┴   └  └─┘┴└─┴ ┴┴ ┴ ┴
   elm-format:
     name: validate elm files
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
 
     steps:
       - uses: actions/checkout@v1
@@ -62,7 +62,7 @@ jobs:
   # └─┘┴─┘┴ ┴   ┴ └─┘└─┘ ┴
   elm-test:
     name: run elm tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
 
     steps:
       - uses: actions/checkout@v1
@@ -100,7 +100,7 @@ jobs:
   # ┴─┘┴┘└┘ ┴
   lint:
     name: lint
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
 
     steps:
       - uses: actions/checkout@v1
@@ -136,7 +136,7 @@ jobs:
   # └─┘ ┴ ┴  ┴└─└─┘└─┘└─┘
   integration:
     name: run cypress tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
     env:
       VELA_API: 'http://localhost:8080'
       VELA_SOURCE_URL: ''
@@ -178,7 +178,7 @@ jobs:
   # ┴  └─┘└─┘┴─┘┴└─┘┴ ┴
   publish:
     name: build and push to docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
     if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'go-vela/ui'
     needs: [lint, elm-format, elm-test, integration]
 
