--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ on:
 # pipeline to execute
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
     container:
       image: golang:latest
     steps:
