fix(proxy): allow cli to fully work with ui url

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,10 +19,10 @@ server {
         return 204;
     }
 
-    # /login proxy to backend server to allow configuring CLI w/ UI server
-    location /login {
+    # proxy to backend server to allow using CLI w/ UI url
+    location ~ ^/(login|authenticate|api) {
         proxy_pass $VELA_API;
-        
+
         recursive_error_pages on;
         proxy_intercept_errors on;
         error_page 301 302 307 = @handle_redirects;
@@ -54,7 +54,7 @@ server {
         log_not_found off;
         access_log off;
     }
-    
+
     # robots.txt
     location = /robots.txt {
         log_not_found off;
