--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -16,11 +16,11 @@ server {
         access_log off;
         return 204;
     }
-    
-    # /login proxy to backend server to allow configuring CLI w/ UI server
-    location /login {
+
+    # proxy to backend server to allow using CLI w/ UI url
+    location ~ /(login|authenticate|api) {
         proxy_pass http://server:8080;
-        
+
         recursive_error_pages on;
         proxy_intercept_errors on;
         error_page 301 302 307 = @handle_redirects;
@@ -52,7 +52,7 @@ server {
         log_not_found off;
         access_log off;
     }
-    
+
     # robots.txt
     location = /robots.txt {
         log_not_found off;
