fix merge conflict

--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -17,8 +17,8 @@ server {
         return 204;
     }
 
-    # /login proxy to backend server to allow configuring CLI w/ UI server
-    location /login {
+    # proxy to backend server to allow using CLI w/ UI url
+    location ~ /(login|authenticate|api) {
         proxy_pass http://server:8080;
 
         recursive_error_pages on;
