--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,8 +19,8 @@ server {
         return 204;
     }
 
-    # /login proxy to backend server to allow configuring CLI w/ UI server
-    location /login {
+    # proxy to backend server to allow using CLI w/ UI url
+    location ~ ^/(login|authenticate|api) {
         proxy_pass $VELA_API;
 
         recursive_error_pages on;
