--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "node": ">=12.14.1"
   },
   "dependencies": {
+    "@types/clipboard": "^2.0.1",
     "@fullhuman/postcss-purgecss": "^2.0.6",
     "@types/parcel-env": "0.0.0",
     "autoprefixer": "^9.7.3",
+    "clipboard": "^2.0.4",
     "elm": "^0.19.1-3",
     "node-elm-compiler": "^5.0.4",
     "parcel-bundler": "^1.12.4",
