--- a/package.json
+++ b/package.json
@@ -81,10 +81,12 @@
     "cypress"
   ],
   "staticFiles": {
-    "staticPath": [{
-      "staticPath": "src/static/images",
-      "staticOutDir": "images"
-    }]
+    "staticPath": [
+      {
+        "staticPath": "src/static/images",
+        "staticOutDir": "images"
+      }
+    ]
   },
   "license": "Apache-2.0"
 }
