fix(csp): allow svg from server

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' $VELA_API; img-src 'self'; style-src 'self'" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' $VELA_API; img-src 'self' $VELA_API; style-src 'self'" always;
     # the following header will break things unless you are running behind a secured (ssl/tls) load balancer or proxy
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
@@ -22,7 +22,7 @@ server {
     # /login proxy to backend server to allow configuring CLI w/ UI server
     location /login {
         proxy_pass $VELA_API;
-        
+
         recursive_error_pages on;
         proxy_intercept_errors on;
         error_page 301 302 307 = @handle_redirects;
@@ -54,7 +54,7 @@ server {
         log_not_found off;
         access_log off;
     }
-    
+
     # robots.txt
     location = /robots.txt {
         log_not_found off;
