--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -9,18 +9,18 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' http://localhost:8080; img-src 'self'; style-src 'self'" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' http://localhost:8080; img-src 'self' http://localhost:8080; style-src 'self'" always;
 
     # serve up health endpoint
     location /health {
         access_log off;
         return 204;
     }
-    
+
     # /login proxy to backend server to allow configuring CLI w/ UI server
     location /login {
         proxy_pass http://server:8080;
-        
+
         recursive_error_pages on;
         proxy_intercept_errors on;
         error_page 301 302 307 = @handle_redirects;
@@ -52,7 +52,7 @@ server {
         log_not_found off;
         access_log off;
     }
-    
+
     # robots.txt
     location = /robots.txt {
         log_not_found off;
