--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,14 @@ services:
 
   server:
     container_name: server
-    image: target/vela-server
+    image: localhost:5000/vela-server
     networks:
       - vela
     environment:
       VELA_ADDR: 'http://localhost:8080'
       VELA_WEBUI_ADDR: 'http://ui:80'
       VELA_DATABASE_DRIVER: postgres
-      VELA_DATABASE_CONFIG: postgres://postgres@postgres:5432/vela?sslmode=disable
+      VELA_DATABASE_CONFIG: postgres://postgres:password@postgres:5432/vela?sslmode=disable
       VELA_LOG_LEVEL: debug
       VELA_QUEUE_DRIVER: redis
       VELA_QUEUE_CONFIG: redis://redis:6379
@@ -46,29 +46,29 @@ services:
       - redis
       - vault
 
-  # worker:
-  #   container_name: worker
-  #   image: target/vela-worker
-  #   networks:
-  #     - vela
-  #   environment:
-  #     VELA_ADDR: http://server:8080
-  #     VELA_EXECUTOR_THREADS: 1
-  #     VELA_LOG_LEVEL: debug
-  #     VELA_QUEUE_DRIVER: redis
-  #     VELA_QUEUE_CONFIG: redis://redis:6379
-  #     VELA_QUEUE_WORKER_ROUTES: larger,docker,large:docker
-  #     VELA_RUNTIME_DRIVER: docker
-  #     VELA_SECRET: zB7mrKDTZqNeNTD8z47yG4DHywspAh
-  #     VELA_VAULT_ADDR: http://vault:8200
-  #     VELA_VAULT_TOKEN: vela
-  #   restart: always
-  #   ports:
-  #     - '8081:8080'
-  #   volumes:
-  #     - '/var/run/docker.sock:/var/run/docker.sock'
-  #   depends_on:
-  #     - server
+  worker:
+    container_name: worker
+    image: target/vela-worker
+    networks:
+      - vela
+    environment:
+      VELA_ADDR: http://server:8080
+      VELA_EXECUTOR_THREADS: 1
+      VELA_LOG_LEVEL: debug
+      VELA_QUEUE_DRIVER: redis
+      VELA_QUEUE_CONFIG: redis://redis:6379
+      VELA_QUEUE_WORKER_ROUTES: larger,docker,large:docker
+      VELA_RUNTIME_DRIVER: docker
+      VELA_SECRET: zB7mrKDTZqNeNTD8z47yG4DHywspAh
+      VELA_VAULT_ADDR: http://vault:8200
+      VELA_VAULT_TOKEN: vela
+    restart: always
+    ports:
+      - '8081:8080'
+    volumes:
+      - '/var/run/docker.sock:/var/run/docker.sock'
+    depends_on:
+      - server
 
   redis:
     container_name: redis
@@ -85,6 +85,7 @@ services:
       - vela
     environment:
       POSTGRES_DB: vela
+      POSTGRES_PASSWORD: password
     ports:
       - '5432:5432'
 
