--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -18,7 +18,7 @@ server {
     }
 
     # proxy to backend server to allow using CLI w/ UI url
-    location ~ /(login|authenticate|api) {
+    location ~ ^/(login|authenticate|api) {
         proxy_pass http://server:8080;
 
         recursive_error_pages on;
