--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,16 +53,15 @@ services:
   #   networks:
   #     - vela
   #   environment:
-  #     VELA_ADDR: http://server:8080
-  #     VELA_EXECUTOR_THREADS: 1
+  #     VELA_BUILD_LIMIT: 1
+  #     VELA_BUILD_TIMEOUT: 30m
   #     VELA_LOG_LEVEL: debug
   #     VELA_QUEUE_DRIVER: redis
   #     VELA_QUEUE_CONFIG: redis://redis:6379
   #     VELA_QUEUE_WORKER_ROUTES: larger,docker,large:docker
   #     VELA_RUNTIME_DRIVER: docker
-  #     VELA_SECRET: zB7mrKDTZqNeNTD8z47yG4DHywspAh
-  #     VELA_VAULT_ADDR: http://vault:8200
-  #     VELA_VAULT_TOKEN: vela
+  #     VELA_SERVER_ADDR: http://server:8080
+  #     VELA_SERVER_SECRET: zB7mrKDTZqNeNTD8z47yG4DHywspAh
   #   restart: always
   #   ports:
   #     - '8081:8080'
