--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@types/clipboard": "^2.0.1",
     "@types/parcel-env": "0.0.0",
-    "autoprefixer": "^10.0.0",
+    "autoprefixer": "9.8.6",
     "clipboard": "^2.0.6",
     "elm": "^0.19.1-3",
     "node-elm-compiler": "^5.0.5",
