--- a/secrets.env.example
+++ b/secrets.env.example
@@ -22,6 +22,11 @@
 # default: https://go-vela.github.io/docs
 # VELA_DOCS_URL=
 
+# Vela api server address, typically runs on port :8080 locally.
+# Should match the "VELA_ADDR" value in docker-compose.yml
+# when running locally.
+VELA_API=http://localhost:8080
+
 ############################################################
 #  _______  _______  ______    __   __  _______  ______    #
 # |       ||       ||    _ |  |  | |  ||       ||    _ |   #
