--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "local>go-vela/renovate-config"
-  ]
+  "extends": ["local>go-vela/renovate-config"]
 }
