--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,11 @@ services:
   # https://go-vela.github.io/docs/concepts/infrastructure/server/
   server:
     container_name: server
-    image: target/vela-server:latest
+    # image: target/vela-server:latest
+    build:
+      context: ../server/
+      dockerfile: Dockerfile
+    image: server:local
     networks:
       - vela
     environment:
