update dockerfile to match other updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,10 @@ services:
       VELA_SECRET_VAULT: 'true'
       VELA_SECRET_VAULT_ADDR: 'http://vault:8200'
       VELA_SECRET_VAULT_TOKEN: vela
+      VELA_REFRESH_TOKEN_DURATION: 5m
+      VELA_ACCESS_TOKEN_DURATION: 1m
       VELA_DISABLE_WEBHOOK_VALIDATION: 'true'
+      VELA_ENABLE_SECURE_COOKIE: 'false'
     env_file:
       - .env
     restart: always
@@ -82,6 +85,7 @@ services:
       VELA_SERVER_ADDR: 'http://server:8080'
       VELA_SERVER_SECRET: 'zB7mrKDTZqNeNTD8z47yG4DHywspAh'
       WORKER_ADDR: http://worker:8080
+      WORKER_CHECK_IN: 15m
     restart: always
     ports:
       - '8081:8080'
