--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,16 +1,16 @@
-FROM fholzer/nginx-brotli
+FROM caddy:2.3.0-alpine
 
 RUN apk update && \
-    apk add --no-cache ca-certificates && \
+    apk add --no-cache gettext ca-certificates && \
     rm -rf /var/cache/apk/*
 
-COPY dist /usr/share/nginx/html
+COPY dist /srv
 
-COPY nginx/local.conf /etc/nginx/conf.d/default.conf
+COPY caddy/Caddyfile.local /etc/caddy/Caddyfile
 
 COPY docker-entrypoint.sh /usr/local/bin
 RUN ln -s /usr/local/bin/docker-entrypoint.sh /
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["caddy", "run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
