add host prefix to redirect_location

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -40,7 +40,7 @@ server {
     }
 
     location @handle_redirects {
-        set $saved_redirect_location '$upstream_http_location';
+        set $saved_redirect_location '$VELA_API$upstream_http_location';
         proxy_pass $saved_redirect_location;
     }
 
