--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -19,8 +19,7 @@ server {
 
     # proxy to backend server to allow using CLI w/ UI url
     location ~ ^/(login|authenticate|api/v[0-9]+/) {
-
-        proxy_pass 'http://server:8080';
+        proxy_pass http://server:8080;
 
         recursive_error_pages on;
         proxy_intercept_errors on;
@@ -39,9 +38,7 @@ server {
     }
 
     location @handle_redirects {
-
         set $saved_redirect_location 'http://server:8080$upstream_http_location';
-
         proxy_pass $saved_redirect_location;
     }
 
