adding scheme://host to redirect location

--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -38,7 +38,7 @@ server {
     }
 
     location @handle_redirects {
-        set $saved_redirect_location 'http://server:8080$upstream_http_location';
+        set $saved_redirect_location '$scheme://$upstream_addr$upstream_http_location';
         proxy_pass $saved_redirect_location;
     }
 
