using api host and prefix in proxy_pass

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -40,7 +40,9 @@ server {
     }
 
     location @handle_redirects {
-        set $saved_redirect_location '$scheme://$upstream_addr$upstream_http_location';
+        # add upstream redirect path to $VELA_API 
+        set $saved_redirect_location '$VELA_API$upstream_http_location';
+        
         proxy_pass $saved_redirect_location;
     }
 
