--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -35,12 +35,16 @@ server {
         proxy_set_header X-Forwarded-Proto  $scheme;
         proxy_set_header X-Forwarded-Host   $host;
         proxy_set_header X-Forwarded-Port   $server_port;
+
     }
 
     location @handle_redirects {
-        set $saved_redirect_location '$scheme://$upstream_addr$upstream_http_location';
+        # add upstream redirect path to http://server:8080 
+        set $saved_redirect_location 'http://server:8080$upstream_http_location';
+        
         proxy_pass $saved_redirect_location;
     }
+
 
     # deny acccess to . files
     location ~ /\.(?!well-known) {
