setting local proxy_pass explicitly

--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -38,8 +38,8 @@ server {
     }
 
     location @handle_redirects {
-        # add upstream redirect path to http://server:8080 
-        set $saved_redirect_location 'http://server:8080$upstream_http_location';
+        # set proxy_pass to the upstream address 
+        set $saved_redirect_location 'http://$upstream_addr$upstream_http_location';
         proxy_pass $saved_redirect_location;
     }
 
