--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -40,7 +40,7 @@ server {
     }
 
     location @handle_redirects {
-        # add upstream redirect path to $VELA_API 
+        # set proxy_pass to VELA_API + upstream location
         set $saved_redirect_location '$VELA_API$upstream_http_location';
         proxy_pass $saved_redirect_location;
     }
