--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -38,7 +38,7 @@ server {
     }
 
     location @handle_redirects {
-        # set proxy_pass to the upstream address 
+        # set proxy_pass to http:// + upstream_addr + upstream_http_location
         set $saved_redirect_location 'http://$upstream_addr$upstream_http_location';
         proxy_pass $saved_redirect_location;
     }
