--- a/package.json
+++ b/package.json
@@ -7,27 +7,20 @@
     "node": ">=14.16.0"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "4.0.2",
-    "@types/clipboard": "2.0.1",
-    "@types/parcel-env": "0.0.0",
-    "autoprefixer": "10.2.5",
-    "clipboard": "2.0.8",
-    "elm": "0.19.1-5",
-    "node-elm-compiler": "5.0.5",
-    "parcel-plugin-static-files-copy": "2.5.1",
-    "rimraf": "3.0.2",
-    "sass": "1.32.8",
-    "typescript": "4.2.3"
+    "clipboard": "2.0.8"
   },
   "devDependencies": {
-    "@parcel/transformer-elm": "^2.0.0-nightly.2249",
-    "@parcel/transformer-sass": "^2.0.0-nightly.627",
+    "@fullhuman/postcss-purgecss": "4.0.2",
+    "@parcel/transformer-elm": "2.0.0-nightly.2249",
+    "@parcel/transformer-sass": "2.0.0-nightly.627",
     "axe-core": "4.1.3",
     "cypress": "5.6.0",
     "cypress-axe": "0.12.2",
-    "elm-hot": "1.1.6",
-    "parcel": "^2.0.0-nightly.625",
+    "make-dir-cli": "2.0.0",
+    "ncp": "2.0.0",
+    "parcel": "2.0.0-nightly.625",
     "prettier": "2.2.1",
+    "rimraf": "3.0.2",
     "start-server-and-test": "1.12.0",
     "stylelint": "13.12.0",
     "stylelint-a11y": "1.2.3",
@@ -45,12 +38,14 @@
     "predev": "npm run clean",
     "dev": "npm run start",
     "prestart": "npm run clean",
-    "start": "parcel src/static/index.html --port 8888",
-    "build-img": "parcel build src/static/img/*",
+    "start": "npm run copy:static && parcel src/static/index.html --port 8888",
     "prebuild": "npm run clean",
     "build": "parcel build src/static/index.html --no-optimize",
-    "prebuild-prod": "npm run clean",
-    "build-prod": "parcel build src/static/index.html --no-cache --detailed-report",
+    "postbuild": "npm run copy:static",
+    "prebuild:prod": "npm run clean",
+    "build:prod": "parcel build src/static/index.html --no-cache --detailed-report",
+    "postbuild:prod": "npm run copy:static",
+    "copy:static": "make-dir ./dist && ncp ./src/static/images ./dist/images",
     "test": "elm-test --compiler ./node_modules/.bin/elm",
     "test:watch": "elm-test --compiler ./node_modules/.bin/elm --watch",
     "test:cy": "start-test 8888 cypress",
@@ -80,15 +75,7 @@
     "elm",
     "parcel",
     "ci",
-    "cypress"
+    "vela"
   ],
-  "staticFiles": {
-    "staticPath": [
-      {
-        "staticPath": "src/static/images",
-        "staticOutDir": "images"
-      }
-    ]
-  },
   "license": "Apache-2.0"
 }
