--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "build:prod": "parcel build src/static/index.html --no-cache --detailed-report",
     "postbuild:prod": "npm run copy:static",
     "copy:static": "make-dir ./dist && ncp ./src/static/images ./dist/images",
-    "test": "elm-test --compiler ./node_modules/.bin/elm",
-    "test:watch": "elm-test --compiler ./node_modules/.bin/elm --watch",
+    "test": "elm-test",
+    "test:watch": "elm-test --watch",
     "test:cy": "start-test 8888 cypress",
     "test:cy-open": "start-test 8888 cypress:open",
     "cypress": "cypress run",
