--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axe-core": "4.1.3",
     "cypress": "5.6.0",
     "cypress-axe": "0.12.2",
+    "elm": "0.19.1-5",
     "make-dir-cli": "2.0.0",
     "ncp": "2.0.0",
     "parcel": "2.0.0-nightly.625",
